--- a/css/estiloss.css
+++ b/css/estiloss.css
@@ -1,74 +1,86 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
+body {
     margin: 0;
-    background: url('../images/fondosf.jpg');
+    padding: 0;
+    background: url(../images/paisajee.jpg) no-repeat center top;
     background-size: cover;
-    background-attachment: fixed;
-}
-*{
+    font-family: sans-serif;
+    height: 100vh;
+  }
+  
+  .login-box {
+    width: 320px;
+    height: 420px;
+    background: #000;
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
     box-sizing: border-box;
-}
-.contenedor{
-    width: 100%;
-    padding: 15px;
-}
-.formulario{
-    background: #fff;
-    margin-top: 150px;
-    padding: 3px;
-}
-h1{
+    padding: 70px 30px;
+  }
+  
+  .login-box .avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+  }
+  
+  .login-box h1 {
+    margin: 0;
+    padding: 0 0 20px;
     text-align: center;
-    color: #1a2537;
-    font-size: 40px;
-}
-input[type="text"],
-input[type=password]{
-    font-size: 20px;
-    width: 82%;
-    padding: 10px;
-    border: none;
-}
-.input-contenedor{
-    margin-bottom: 15px;
-    border: 1px solid #aaa;
-}
-.icon{
-    min-width: 50px;
-    text-align: center;
-    color: #999;
-}
-.button{
-    border: none;
+    font-size: 22px;
+  }
+  
+  .login-box label {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    display: block;
+  }
+  
+  .login-box input {
     width: 100%;
-    color: white;
-    font-size: 20px;
-    background: #1a2537;
-    padding: 15 px 20px;
-    border-radius: 5px;
+    margin-bottom: 20px;
+  }
+  
+  .login-box input[type="text"], .login-box input[type="password"] {
+    border: none;
+    border-bottom: 1px solid #fff;
+    background: transparent;
+    outline: none;
+    height: 40px;
+    color: #fff;
+    font-size: 16px;
+  }
+  
+  .login-box input[type="submit"] {
+    border: none;
+    outline: none;
+    height: 40px;
+    background: #b80f22;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 20px;
+  }
+  
+  .login-box input[type="submit"]:hover {
     cursor: pointer;
-}
-.button:hover{
-    background: cadatblue;
-}
-p{
-    text-align: center;
-}
-.link{
+    background: #ffc107;
+    color: #000;
+  }
+  
+  .login-box a {
     text-decoration: none;
-    color: #1a2537;
-    font-weight: 600;
-}
-.link:hover{
-    color: cadatblue;
-}
-@media(min-width:768px)
-{
-    .formulario{
-        margin: auto;
-        width: 500px;
-        margin-top: 150px;
-        border-radius: 2%;
-    }
-}
-
+    font-size: 12px;
+    line-height: 20px;
+    color: darkgrey;
+  }
+  
+  .login-box a:hover {
+    color: #fff;
+  }
